# DVM

./: Assembler.d  CMakeLists.txt  Compiler.d  DemoA.kxi  DemoC.kxi  DemoCMinus.kxi  FileSystem.d  Makefile  OperatingSystem.d  Utilities.d  VirtualMachine.d  cm.d  cntl_struct.kxi  cntl_struct.os  compat.os  compat_runall.os  copy_files.sh  disk.sh  fillup.sh  fs.d  head_tail.test  heap_practice.d  io_race.os  memory.os  new_del.asm  nums2.asm  nums3.asm  nums4.asm  nums5.asm  nums7.asm  nums9.asm  os.d  performance.ods  print_class_defs.sh  proj1.asm  proj2.asm  proj3.asm  proj3.test  proj4.asm  proj4.test  (+14 more)
cmake-d/: .gitrepo
cmake-d/cmake-d/: CMakeDInformation.cmake
cmake-d/cmake-d/Compiler/: GNU-D.cmake
cmake-d/cmake-d/Platform/: Linux-gdc.cmake
src/: Assembler.d  CMakeLists.txt  Compiler.d  as.d  cm.d
test/: CMakeLists.txt  DemoA.os  DemoC.os  DemoCMinus.kxi  DemoCMinus.os  compat.os  copy_files.sh  disk.sh  fillup.sh  foo.os  io.os  memory.asm  metrics.os  nums0.asm  nums1.asm  nums6.asm  nums8.asm  proj1.asm  proj3.asm  simple.kxi  test.kxi  test3.kxi  test4.kxi
